--- a/_posts/2015-03-15-post01.md
+++ b/_posts/2015-03-15-post01.md
@@ -5,6 +5,7 @@ sidebar: ''
 excerpt: >-
   Rhoncus at tincidunt ac, feugiat ac dolor. Sed nec odio porta magna feugiat
   quam posuere.
+date: '2015-03-15'
 show_in_footer_news: true
 layout: page
 ---
