--- a/_posts/2015-03-24-post02.md
+++ b/_posts/2015-03-24-post02.md
@@ -5,6 +5,7 @@ sidebar: ''
 excerpt: >-
   Feugiat quam posuere feugiat. Nullam porttitor sodales lorem ipsum dolor sit
   amet.
+date: '2015-03-24'
 show_in_footer_news: true
 layout: page
 ---
