--- a/_posts/2015-03-29-post03.md
+++ b/_posts/2015-03-29-post03.md
@@ -5,6 +5,7 @@ sidebar: ''
 excerpt: >-
   Phasellus tortor magna, convallis sed felis tempor volutpat lorem quam.
   Phasellus lacinia.
+date: '2015-03-29'
 show_in_footer_news: true
 layout: page
 ---
