--- a/_posts/2015-04-05-post05.md
+++ b/_posts/2015-04-05-post05.md
@@ -5,6 +5,7 @@ excerpt: >-
   Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a
   ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit
   ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..
+date: '2015-04-05'
 show_in_sidebar: true
 layout: page
 ---
