--- a/_posts/2015-04-01-post04.md
+++ b/_posts/2015-04-01-post04.md
@@ -6,6 +6,7 @@ excerpt: >-
   Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a
   ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit
   ullamcorper sed blandit lorem ipsum dolore.
+date: '2015-04-01'
 show_in_sidebar: true
 layout: page
 ---
